--- a/package.json
+++ b/package.json
@@ -45,9 +45,15 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/core": "7.16.0",
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+		"@babel/preset-env": "^7.26.0",
+		"@babel/preset-react": "^7.25.9",
 		"@tailwindcss/forms": "^0.5.2",
 		"@testing-library/dom": "^8.20.0",
 		"autoprefixer": "^10.4.7",
+		
+		"babel-preset-react-app": "^10.0.1",
 		"postcss": "^8.4.21",
 		"tailwindcss": "^3.0.24"
 	}
