--- a/package.json
+++ b/package.json
@@ -3,28 +3,29 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
+		"@testing-library/jest-dom": "^6.6.2",
+		"@testing-library/react": "^16.0.1",
 		"@testing-library/user-event": "^14.4.3",
 		"emailjs-com": "^3.2.0",
-		"framer-motion": "^4.1.17",
-		"postcss-cli": "^10.1.0",
+		"framer-motion": "^11.11.11",
+		"postcss-cli": "^11.0.0",
 		"react": "^18.1.0",
 		"react-countup": "^6.1.1",
 		"react-dom": "^18.1.0",
-		"react-icons": "^4.3.1",
+		"react-icons": "^5.3.0",
 		"react-router-dom": "^6.0.2",
-		"react-scripts": "4.0.3",
+		"react-scripts": "5.0.1",
 		"react-scroll": "^1.8.4",
-		"styled-components": "^5.3.3",
-		"web-vitals": "^1.0.1"
+		"styled-components": "^6.1.13",
+		"web-vitals": "^4.2.4"
 	},
 	"scripts": {
-		"start": "react-scripts --openssl-legacy-provider start",
-		"build": "yarn run react-scripts build",
+		"start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+		"build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"build:css": "postcss src/css/tailwind.css -o src/css/main.css"
+		"build:css": "cross-env NODE_ENV=production postcss src/css/tailwind.css -o src/css/main.css",
+		"watch:css": "postcss src/css/tailwind.css -o src/css/main.css --watch"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -45,15 +46,18 @@
 		]
 	},
 	"devDependencies": {
-		"@babel/core": "7.16.0",
+		"@babel/core": "^7.26.0",
 		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"@babel/preset-env": "^7.26.0",
 		"@babel/preset-react": "^7.25.9",
 		"@tailwindcss/forms": "^0.5.2",
-		"@testing-library/dom": "^8.20.0",
+		"@testing-library/dom": "^10.4.0",
 		"autoprefixer": "^10.4.7",
-		
-		"babel-preset-react-app": "^10.0.1",
+		"babel-loader": "8.2.3",
+		"babel-preset-react-app": "10.0.0",
+		"cross-env": "^7.0.3",
+		"eslint": "^9.13.0",
+		"eslint-config-react-app": "^7.0.1",
 		"postcss": "^8.4.21",
 		"tailwindcss": "^3.0.24"
 	}
